--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 </head>
 <body>
     <div id="info">AR Cricket Scorecard</div>
-    <!-- Add WebXR Polyfill -->
-    <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script>
+    <script>
+        var polyfill = new WebXRPolyfill();
+    </script>
     <script type="importmap">
         {
             "imports": {
